# JSI_CAD_NEXT_VERSIONS

./: .gitignore  README.md  VERSION3.md  VERSION7.md
JSI_CAD_NEXT_VERSION0/: Makefile  VERSION.md
JSI_CAD_NEXT_VERSION0/examples/: distance_analysis_example.cu  intersection_example.cu
JSI_CAD_NEXT_VERSION0/include/: nurbs_data.hpp
JSI_CAD_NEXT_VERSION0/utils/: nurbs_tool.cpp
JSI_CAD_NEXT_VERSION1/: Makefile  VERSION.md
JSI_CAD_NEXT_VERSION1/examples/: intersection_example.cu
JSI_CAD_NEXT_VERSION2/: Makefile  VERSION.md
JSI_CAD_NEXT_VERSION2/include/: jsi_cad.hpp
JSI_CAD_NEXT_VERSION3/: Makefile  VERSION.md
JSI_CAD_NEXT_VERSION3/examples/: intersection_example.cu
JSI_CAD_NEXT_VERSION4/: Makefile  VERSION.md
JSI_CAD_NEXT_VERSION4/examples/: distance_analysis_example.cu
JSI_CAD_NEXT_VERSION4/include/: jsi_cad.hpp
JSI_CAD_NEXT_VERSION5/: Makefile  VERSION.md
JSI_CAD_NEXT_VERSION6/: Makefile  VERSION.md
JSI_CAD_NEXT_VERSION6/include/: nurbs_data.hpp
JSI_CAD_NEXT_VERSION7/: Makefile  VERSION.md  VERSION1.md  VERSION2.md  VERSION6.md
JSI_CAD_NEXT_VERSION7/src/ascend/hotspots_910b/: CMakeLists.txt  README.md  build_910b.sh
JSI_CAD_NEXT_VERSION7/src/ascend/hotspots_910b/include/: jsi_ascend_hotspots.h
JSI_CAD_NEXT_VERSION7/src/ascend/hotspots_910b/src/: jsi_ascend_hotspots.cpp
benchmarks/: README.md  build_opencascade_compare.sh  opencascade_compare.cpp  run_jsi_samples.sh
examples/: distance_analysis_example_case2.cu  distance_analysis_example_hard_parallel.cu  distance_analysis_example_hard_wave.cu
include/: nurbs_data.hpp
(+42 files in other folders)
